@@ -173,15 +173,13 @@ public class PieChartDescriptionItemProvider extends WidgetDescriptionItemProvid
      * This adds {@link org.eclipse.emf.edit.command.CommandParameter}s describing the children that can be created
      * under this object. <!-- begin-user-doc --> <!-- end-user-doc -->
      *
-     * @generated
+     * @generated NOT
      */
     @Override
     protected void collectNewChildDescriptors(Collection<Object> newChildDescriptors, Object object) {
         super.collectNewChildDescriptors(newChildDescriptors, object);
 
         newChildDescriptors.add(this.createChildParameter(ViewPackage.Literals.PIE_CHART_DESCRIPTION__STYLE, ViewFactory.eINSTANCE.createPieChartDescriptionStyle()));
-
-        newChildDescriptors.add(this.createChildParameter(ViewPackage.Literals.PIE_CHART_DESCRIPTION__STYLE, ViewFactory.eINSTANCE.createConditionalPieChartDescriptionStyle()));
 
         newChildDescriptors.add(this.createChildParameter(ViewPackage.Literals.PIE_CHART_DESCRIPTION__CONDITIONAL_STYLES, ViewFactory.eINSTANCE.createConditionalPieChartDescriptionStyle()));
     }
